# api_foot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  conftest.py  exemplo.env  jsons.txt  pyproject.toml  sql_app.sqbpro
alembic/: env.py
alembic/versions/: 6cad0931516f_initial.py
api-pezao/: crud.py  main.py
api_pezao/: __init__.py  _models.py  auth.py  config.py  crud.py  csv_input.py  dados_teste.sh  database.py  deps.py  log.py  main.py  models.py  pdf_input.py  schema.py  sendsms.py  sms_utils.py  utils.py  warmup.py
api_pezao/crud/: __init__.py  hospital.py  log.py  result.py  sms.py  user.py
api_pezao/models/: __init__.py  attempt_log.py  hospital_cs.py  log.py  result.py  role.py  roles.py  roles_users.py  template_sms.py  templates_result.py  user.py
api_pezao/routers/: auth.py  files.py  hospitals.py  logs.py  results.py  sms.py  users.py
api_pezao/schemas/: __init__.py  attempt_log.py  hospital_cs.py  log.py  pdf_processed.py  result.py  role.py  roles_users.py  template_result.py  template_sms.py  user.py
tests/: db_utils.py  demo.csv  demo_hospital.csv  demo_templates_result.csv  small_demo.csv  test_api_functional.py  test_auth.py  test_crud.py  test_csv_input.py  test_log.py  test_pdf_input.py  test_settings.py  utils.py
tests/api/: __init__.py  test_api_functional.py  test_auth.py  test_csv.py  test_hospital.py  test_pdf.py  test_root.py  test_sms.py  test_users.py
