[tool.poetry]
name = "api-pezao"
version = "0.1.0"
description = ""
authors = ["Felipe 'Bidu' Rodrigues <felipe@felipevr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {version = "^0.54.1", extras = ["all"]}
sqlalchemy = "^1.3"
python-multipart = "^0.0.5"
pyjwt = "^1.7.1"
passlib = {version = "^1.7.2", extras = ["bcrypt"]}
python-jose = "^3.1.0"
aiofiles = "^0.5.0"
requests = "^2.24.0"
ipdb = "^0.13.3"
pytest-mock = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = {version = "^5.3"}
pre-commit = {version = "^2.0"}
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pylint = "^2.4"
ipython = "^7.13"
pytest-cov = "^2.10.0"
isort = {version = "~4", extras = ["pipfile_deprecated_finder"]}
pytest-xdist = "^1.34.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
